feat:配置调整:eyes:

--- a/nginx/conf.d/upstream.conf
+++ b/nginx/conf.d/upstream.conf
@@ -1,3 +1,7 @@
-upstream backend{
+upstream backend {
     server subscription-consumer:9000;
+}
+
+upstream consumer {
+    server subscription-consumer:9501;
 }
