--- a/nginx/conf.d/subapitest.uppercommerce.com.conf
+++ b/nginx/conf.d/subapitest.uppercommerce.com.conf
@@ -17,6 +17,6 @@ server {
         proxy_set_header Server-Name $server_name;
         proxy_set_header Server-Addr $server_addr;
         proxy_set_header Server-Port $server_port;
-        proxy_pass http://subscription-consumer:9501;
+        proxy_pass http://consumer;
     } 
 }
