--- a/nginx/conf.d/subapitest.uppercommerce.com.conf
+++ b/nginx/conf.d/subapitest.uppercommerce.com.conf
@@ -6,6 +6,10 @@ server {
 
     root /wwwroot;
     location / { 
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Max-Age 7200;
+            return 200;
+        }
         proxy_http_version 1.1;
         proxy_set_header Connection "keep-alive";
         proxy_set_header X-Real-IP $remote_addr;
