fixed:修复跨域的问题:eyes:

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,6 +30,7 @@ http {
 
     gzip  on;
 
+    add_header Access-Control-Max-Age 86400;
     add_header Access-Control-Allow-Origin *;
     add_header 'Access-Control-Allow-Credentials' 'true';
     add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
