fixed:允许请求头中带有request-time:eyes:

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,10 +31,10 @@ http {
     gzip  on;
 
     add_header Access-Control-Max-Age 86400;
-    add_header Access-Control-Allow-Origin *;
+    add_header Access-Control-Allow-Origin * always;
     add_header 'Access-Control-Allow-Credentials' 'true';
     add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
-    add_header Access-Control-Allow-Headers 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
+    add_header Access-Control-Allow-Headers 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,Request-Time';
 
     include /etc/nginx/conf.d/*.conf;
 }
