--- a/nginx/conf.d/subapitest.uppercommerce.com.conf
+++ b/nginx/conf.d/subapitest.uppercommerce.com.conf
@@ -10,6 +10,7 @@ server {
             return 200;
         }
         proxy_http_version 1.1;
+        proxy_pass_request_headers on;
         proxy_set_header Connection "keep-alive";
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Real-PORT $remote_port;
