--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 services:
    nginx:
-        image: nginx:latest
+        image: nginx:stable-alpine-perl
         restart: always
         privileged: true
-        container_name: nginx-1-9
+        container_name: nginx
         working_dir: /wwwroot
         ports:
             - "80:80"
