--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -36,5 +36,12 @@ http {
     add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
     add_header Access-Control-Allow-Headers 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,Request-Time';
 
+    # Forbidden ip
+    server {
+        listen 80 default_server;
+        server_name _;
+        return 403;
+    }
+    
     include /etc/nginx/conf.d/*.conf;
 }
