--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -42,6 +42,9 @@ http {
         server_name _;
         return 403;
     }
+
+    client_max_body_size 20M;
+    client_body_buffer_size 10M;
     
     include /etc/nginx/conf.d/*.conf;
 }
