任务：增加代理缓冲区大小和缓冲区数量
- 将代理缓冲区大小增加至128k
- 将代理缓冲区数量增加至4个，每个大小为256k

Signed-off-by: gnfy <gnfy@163.com>

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,6 +24,9 @@ http {
     sendfile        on;
     #tcp_nopush     on;
 
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+
     server_tokens off;
 
     keepalive_timeout  65;
