--- a/tm-php/compose.yml
+++ b/tm-php/compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
    php:
-        image: tm-php:1.1
+        image: gnfy/tm-php:1.1
         restart: always
         privileged: true
         container_name: tm-php-1-1
