新增一个挂载的目录，兼容程序代码要写的日志目录:eyes:

--- a/tm-php/compose.yml
+++ b/tm-php/compose.yml
@@ -13,4 +13,5 @@ services:
             - ../logs/php:/usr/local/var/log
             - ./php-fpm.d:/usr/local/etc/php-fpm.d
             - ../wwwroot:/wwwroot
+            - ../wwwroot:/home/wwwroot
             - /usr/share/nginx/html:/usr/share/nginx/html
