--- a/nginx-http-concat/compose.yml
+++ b/nginx-http-concat/compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
    nginx:
-        image: gnfy:nginx-http-concat:1.2
+        image: gnfy/nginx-http-concat:1.3
         restart: always
         privileged: true
         container_name: nginx
