update:nginx配置兼容ipv6:eyes:

--- a/nginx-http-concat/conf.d/subwebtest.uppercommerce.com.conf
+++ b/nginx-http-concat/conf.d/subwebtest.uppercommerce.com.conf
@@ -1,5 +1,5 @@
 server {
-    listen          80; 
+    listen          [::]:80; 
     server_name     subwebtest.uppercommerce.com;
 
     include  /etc/nginx/conf.d/log/access_log.conf;
